完成貸款計算機

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     #result {
       background-color: rgb(165, 165, 235);
-      display: inline-block;
+      /* display: inline-block; */
     }
 
     #result h1 {
