修改重置函式

--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
     });
     // 重置輸入 函式
     function reset_input() {
-      principalEl.innerHTML = "";
-      rateEl.innerHTML = "";
-      timeEl.innerHTML = "";
+      principalEl.value = "";
+      rateEl.value = "";
+      timeEl.value = "";
       resultEl.innerHTML = "";
       resultTableEl.innerHTML = "";
     }
