--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@
       margin: 0 auto;
     }
 
+    /* 依視窗高度自動調整表格大小 */
     @media screen and (max-width:1024px) {
       #tableContainer {
         width: 80%;
       }
     }
 
+    /* 依視窗高度自動調整表格大小 */
     @media screen and (max-width:600px) {
       #tableContainer {
         width: 100%;
